@@ -39,6 +39,9 @@
 					    <div class="form-item">
 					      <input type="submit" name="submit" id="submit" class="form-submit red next" value="Ga verder" />
 					    </div>
+					    <div class="form-item">
+					      <a href="#" class="button blue previous">Vorige</a>
+					    </div>
 				    </form>
 			    </div>
 			  </div> <!-- inner -->
