@@ -292,6 +292,11 @@ a.link {
   border: none !important;
 }
 
+a.previous {
+  min-width: 250px;
+  font-weight: bolder;
+} 
+
 /* Checkbox - TODO: checkbox image is missing in PSD! */
 /*input[type="checkbox"] {
     display:none;
