@@ -160,3 +160,4 @@ en eindigt bij 31 ("algemeen: afbeelding -> responsive...").
 
 - ipad tablet portrait: registratie - "volgende knop": sprite.png en stylesheet aangepast
 - achtergrond menu transparant maken op mobile: stylesheet aangepast
+- "Vorige" knop bij registreer: zie registreer-1.html (regels 42-44). Extra <div class="form-item"> met <a>. Stylesheet hiervoor ook aangepast.
